# delta-web

./: CNAME  index.html
js/: index.js
python/: process_excel_file.py  pyproject.toml
python/data/: ActivityReport.xlsx  ActivityReport_12-10.xlsx  Fifth_Part_12_02.kml  First_Part_12-10.kml  curl.txt
staging/: index.html
staging/css/: style.css
staging/js/: index.js
