[tool.poetry]
name = "python"
version = "0.1.0"
description = "process findmesport activity file into a kml for google maps"
authors = ["Nadège Michel <michel.nadege@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
simplekml = "^1.3.6"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
